--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
     </dependency>
     <dependency>
       <groupId>io.cdap.cdap</groupId>
-      <artifactId>cdap-unit-test</artifactId>
+      <artifactId>cdap-unit-test-spark2_2.11</artifactId>
       <version>${cdap.version}</version>
       <scope>test</scope>
       <exclusions>
